# harbor-assignment

./: README.md  instruction.md  pyproject.toml  task.toml
environment/: Dockerfile  input.txt
harbor_tasks/json-transform/solution/: solve.sh
screenshots/: test.txt
solution/: .solve.sh.swp  solve.sh
tests/: test.sh  test_outputs.py
